k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juicypie-frontend-main-deployment
  labels:
    app: juicypie-frontend-main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: juicypie-frontend-main
  template:
    metadata:
      labels:
        app: juicypie-frontend-main
    spec:
      containers:
      - name: juicypie-frontend-main-container
        image: 638145506484.dkr.ecr.us-east-2.amazonaws.com/juicypie-frontend-main
        ports:
        - name: http
          protocol: TCP
          containerPort: 3000
