k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: juicypie-frontend-main-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: juicypie.com
    http:
      paths:
      - path: /
        backend:
          serviceName: juicypie-frontend-main-service
          servicePort: 3000
